--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -1,6 +1,4 @@
 <h3>Front</h3>
-<ul>
-  <li *ngFor="let image of images">
-    <img [src]="'http://media.mw.metropolia.fi/wbma/uploads/'+image.filename">
-  </li>
-</ul>
+<div *ngFor="let file of images">
+  <img [alt]="file.title" [src]="'http://media.mw.metropolia.fi/wbma/uploads/' + (file.filename | thumbnail: 'small')">
+</div>
